hphp/hack/test/typecheck/parse_int_with_underscore.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class BigNumbersRUs {
  const int dec = 1_234_567_890;
  const int hex = 0xff_cc_123_4;
  const int bin = 0b11_00_11_00;
  const int oct = 0666_555_444;
  const int neg_dec = -1_234_567_890;
  const int neg_hex = -0xff_cc_123_4;
  const int neg_bin = -0b11_00_11_00;
  const int neg_oct = -0666_555_444;
}
